# RayCasting

./: .gitignore  CMakeLists.txt  CmakeLists.txt  INSTALL.md  LICENSE  README.md  main.cpp
Configurator/: Configurator.pyw  Json_Manager.py  default_settings.py  dsetts.py  main.pyw  sclasses.py
Configurator/JsonManager/: JsonFileManager.py  serialisation_classes.py
RayCastingConfigurator/: Configurator.py  Configurator.pyw  settings.json
RayCastingConfigurator/JsonManager/: JsonFileManager.py  serialisation_classes.py
headers/: Button.hpp  Camera.hpp  Collider.hpp  Map.hpp  MiniMap.hpp  World.hpp  ray-cast.hpp  system_without_console.hpp
ray-cast/: ray-cast.cpp  ray-cast.hpp
scripts/: build.cmd  build.sh
scripts/cmake/: CP.cmake  GUI_PROGRAM.cmake  LINK_LIB_JSON.cmake  LINK_LIB_SFML.cmake  LINK_PYTHON_REQUIREMENTS.cmake
source/: Button.cpp  CMakeLists.txt  Camera.cpp  Collider.cpp  Map.cpp  MiniMap.cpp  main.cpp  ray-cast.cpp  ray-cast.hpp  system_without_console.cpp
source/Objects/: Button.cpp  CMakeLists.txt  Camera.cpp  World.cpp
source/Objects/include/: Background.hpp  Button.hpp  Camera.hpp  World.hpp
source/Objects/include/world_map/: Map.hpp
source/Objects/world_map/: Map.cpp
source/Settings_Updater/: CMakeLists.txt  settings.cpp
source/Settings_Updater/Observer/: Is_File_Changed.cpp
source/Settings_Updater/include/: Settings_Updater.hpp
source/kernel/: CMakeLists.txt  Collider.cpp  ray-cast.cpp
source/kernel/include/: Collider.hpp  ray-cast.hpp
source/objects/: Button.cpp  CMakeLists.txt  Camera.cpp
source/objects/include/: Background.hpp  Camera.hpp
source/objects/world_map/: Map.cpp  MiniMap.cpp
source/settings_manager/: CMakeLists.txt  Settings_Updater.cpp  settings.cpp
source/settings_manager/Observer/: Is_File_Changed.cpp
source/settings_manager/include/: Settings_Updater.hpp  settings.hpp
source/settings_manager/include/Observer/: Is_File_Changed.hpp  JSON_File_Observer.hpp
source/start_configurator/: CMakeLists.txt  start_configurator.cpp  system_without_console.cpp
source/start_configurator/include/: start_configurator.hpp  system_without_console.hpp
